# Laboratorios-Fisica-2

./: .gitmodules  CMakeLists.txt  Makefile  README.md  data_con_ampolleta_lin2.txt  data_con_ampolleta_sin_lin2.txt  data_linealizada_1.txt  data_sin_ampolleta_2.txt  data_sin_linealizar_1.txt  estructuras.h  funciones.h  main.cpp
